# ipfce-2024-classroom-assignment-7-285191U013-IPFCE-assignment-7

./: CMakeLists.txt  README.md  stack.c  stack.h  taylor_sine.c  taylor_sine.h
.devcontainer/: devcontainer.json
tests/: tests.cpp
